SONAR-12686 update JVM options to match defaults in ES 7.X
Elastic introduced "system" JVM settings in 7.X:
 * "system" settings are set from Java code (class SystemJvmOptions)
 * which means these JVM settings are not defined in "jvm.options" file anymore